--- a/_posts/html-bookmark/2015-02-10-bookmark.md
+++ b/_posts/html-bookmark/2015-02-10-bookmark.md
@@ -116,3 +116,5 @@ tags : [bookmark]
     - [用户权限数据库设计](http://minjiechenjava.iteye.com/blog/1759482)
 
     - [修改hosts复活Google](http://www.douban.com/note/166081563/?ADUIN=1218089628&ADSESSION=1401930163&ADTAG=CLIENT.QQ.5335_.0&ADPUBNO=26351)
+
+    - [Windows7远程端口3389修改](http://jingyan.baidu.com/article/456c463b9d1e0b0a583144ce.html?qq-pf-to=pcqq.c2c)
